# Server-Framework

./: README.md
SrcCode/: log.cpp  log.h  log.hpp  makefile  singleton.h  test  test.cpp
StudyCode/: readme.md
StudyCode/CMake/: CMakeLists.txt
StudyCode/CMake/Test1/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
StudyCode/CMake/src/: CMakeLists.txt  TestCMake.cc
test/: makefile  test  test.cpp
